@@ -3,6 +3,7 @@ xine-lib (1.1.1)
     When playing a 44.1khz stream on a 48khz only capable sound card.
     It bypasses alsa-lib resampler and uses xine's
   * Windows ports fixes and improvements
+  * Set up the framebuffer palette (fb video out).
 
 xine-lib (1.1.0)
   * new quality deinterlacer from dscaler: GreedyH (Greedy High Motion)
